fix: fix z-index of cards

--- a/pages/main/styles/03-friends.css
+++ b/pages/main/styles/03-friends.css
@@ -18,6 +18,7 @@
 	position: relative;
 	left: -1080px;
 	display: flex;
+	z-index: 1;
 }
 
 .slider__cards_prev,
